fixed collapse bug

--- a/src/hs-components/Layout/PageHeader/style.css
+++ b/src/hs-components/Layout/PageHeader/style.css
@@ -11,5 +11,6 @@
     top: 0;
     width: 100%;
     z-index: 500;
+    min-height: 64px;
     height: calc(64px- 100%);
 }
